<resources>
    <string name="app_name">CalculatorSederhana</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_0">0</string>
    <string name="_tambah">+</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="x">x</string>
    <string name="_kurang">-</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_x">x</string>
    <string name="_01">0</string>
    <string name="bagi">:</string>
    <string name="samadgn">=</string>
    <string name="koma">.</string>
    <string name="clear">Clear</string>
    <string name="del">Del</string>
</resources>
